--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -8,6 +8,11 @@
 </head>
 
 <body>
+    {% extends "base.html" %}
+    {% block content %}
+
+    <h2>I'm extending the base template</h2>
+
     {% for task in tasks %}
     {{ task.task_name }}<br>
     {{ task.category_name}}<br>
@@ -15,6 +20,8 @@
     {{ task.is_urgent }}<br>
     {{ task.due_date }}<br>
     {% endfor %}
+
+    {% endblock %}
 </body>
 
 </html>
