--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="h3-center-align">Register</div>
+<h3 class="center-align">Log In</h3>
 
 <div class="row">
-    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
+    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
         <div class="card-panel">
 
             <!--username field-->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-user-plus prefix light-purple-text text-darken-4"></i>
+                    <i class="fas fa-user-cog prefix light-purple-text text-darken-4"></i>
                     <input id="username" name="username" type="text" minlength="5" maxlength="15"
                         pattern="^[a-zA-Z0-9]{5-15}$" class="validate" required>
                     <label for="username">Username</label>
@@ -25,21 +25,22 @@
                     <label for="password">Password</label>
                 </div>
             </div>
-            <!--register button field-->
+            <!--log in  button field-->
             <div class="row">
                 <button type="submit" class="col s12 btn-large light-purple darken-4 text-shadow">
-                    Register <i class="fas fa-sign-in-alt"></i>
+                    Log In <i class="fas fa-sign-in-alt"></i>
                 </button>
             </div>
         </div>
     </form>
-</div>
 
-<div class="row">
-    <div class="col s12">
-        <p class="center-align">
-            Already Registered? <a href="{{ url_for('login') }}" class="light-blue-text darken-4 text-shadow">Log In</a>
-        </p>
+    <div class="row">
+        <div class="col s12">
+            <p class="center-align">
+                New here? <a href="{{ url_for('register') }}" class="light-blue-text darken-4 text-shadow">Register
+                    Account</a>
+            </p>
+        </div>
     </div>
 </div>
 
