--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="h3-center-align">Register</div>
+<h3 class="center-align">Register</h3>
 
 <div class="row">
     <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
