--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -4,7 +4,8 @@
 <h3 class="light-blue-text text-darken-4 center-align">Add Task</h3>
 
 <div class="row card-panel grey lighten-5">
-    <form class="col s12" method="POST" action="">
+    <form class="col s12" method="POST" action="{{ url_for('add_task') }}">
+        <!-- category selection -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
@@ -18,6 +19,7 @@
                 <label for="category_name">Task Category</label>
             </div>
         </div>
+        <!-- task name -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
@@ -26,6 +28,7 @@
                 <label for="task_name">Task Name</label>
             </div>
         </div>
+        <!-- task description-->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-align-left light-blue-text text-darken-4 prefix"></i>
@@ -34,7 +37,7 @@
                 <label for="task_description">Task Description</label>
             </div>
         </div>
-
+        <!--due date picker-->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-calender-alt prefix light-blue-text text-darken-4"></i>
@@ -43,7 +46,7 @@
                 <label for="due_date">Due Date</label>
             </div>
         </div>
-
+        <!--is urgent toggle-->
         <div class="row">
             <div class="input-field col s12">
                 <div class="switch">
@@ -54,6 +57,14 @@
                         Is Urgent
                     </label>
                 </div>
+            </div>
+        </div>
+        <!--submit button-->
+        <div class="row">
+            <div class="col s12 center-align">
+                <button type="submit" class="btn-large light-blue darken-1 text-shadow">
+                    Add Task <i class="fas fa-plus-square right"></i>
+                </button>
             </div>
         </div>
     </form>
