--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,5 +4,13 @@
 
 .flashes h4 {
     line-height: 2;
-    
+}
+
+.btn-small {
+    margin: 5px;
+}
+
+strong {
+    margin: 5px;
+    line-height: 42px;
 }
